force-app/main/default/objects/Charge_Information__c/Charge_Information__c.object-meta.xml
<CustomObject>
    <description>The information in this section pertains to the criminal charges relating to the subjects in this case</description>
    <label>Charge Information</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Charge ID #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>