force-app/main/default/objects/Charge_Information__c/fields/ACIS_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>ACIS_Case_Number__c</fullName>
    <formula>Case__r.ACIS_Case_Number__c</formula>
    <label>ACIS Case Number</label>
    <type>Text</type>
</CustomField>