force-app/main/default/objects/Charge_Information__c/fields/Amount_of_Fine__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Fine__c</fullName>
    <description>Amount that the court ordered the defendant to pay</description>
    <label>Amount of Fine (In Dollars)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>