force-app/main/default/objects/Charge_Information__c/fields/Amount_of_Fine_In_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Fine_In_Dollars__c</fullName>
    <label>Amount of Fine (In Dollars)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>