force-app/main/default/objects/Charge_Information__c/fields/Amount_of_Restitution__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Restitution__c</fullName>
    <label>Amount of Restitution</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>