force-app/main/default/objects/Charge_Information__c/fields/Animal_Ban__c.field-meta.xml
<CustomField>
    <fullName>Animal_Ban__c</fullName>
    <formula>IF(INCLUDES( Sentence_Details_Picklist__c, &quot;Animal Ban&quot;), &quot;Animal Ban&quot;, &quot;NO Animal Ban&quot;)</formula>
    <label>Animal Ban</label>
    <type>Text</type>
</CustomField>