force-app/main/default/objects/Charge_Information__c/fields/Animal_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name_s__c</fullName>
    <formula>Case__r.Animal_Name_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Name(s)</label>
    <type>Text</type>
</CustomField>