force-app/main/default/objects/Charge_Information__c/fields/Appeal__c.field-meta.xml
<CustomField>
    <fullName>Appeal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there is an appeal. Update the Criminal Court Timeline with any relevant appeal dates</inlineHelpText>
    <label>Appeal</label>
    <type>Checkbox</type>
</CustomField>