force-app/main/default/objects/Charge_Information__c/fields/Appeal_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Box_Link__c</fullName>
    <label>Appeal Box Link</label>
    <type>Url</type>
</CustomField>