force-app/main/default/objects/Charge_Information__c/fields/Appeal_Docket__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Docket__c</fullName>
    <label>Appeal Docket #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>