force-app/main/default/objects/Charge_Information__c/fields/Appellate_Court_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Appellate_Court_Jurisdiction__c</fullName>
    <label>Appellate Court Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Court of Appeals</fullName>
            </value>
            <value>
                <fullName>Federal Circuit Court</fullName>
            </value>
            <value>
                <fullName>Supreme Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>