force-app/main/default/objects/Charge_Information__c/fields/Arraignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Arraignment_Date__c</fullName>
    <label>Arraignment Date</label>
    <type>Date</type>
</CustomField>