force-app/main/default/objects/Charge_Information__c/fields/Arrest__c.field-meta.xml
<CustomField>
    <fullName>Arrest__c</fullName>
    <label>Arrest #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>