force-app/main/default/objects/Charge_Information__c/fields/Arrest_Charge_s_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Arrest_Charge_s_Filed_Date__c</fullName>
    <label>Arrest/Charge(s) Filed Date</label>
    <type>Date</type>
</CustomField>