force-app/main/default/objects/Charge_Information__c/fields/Arrest_Type__c.field-meta.xml
<CustomField>
    <fullName>Arrest_Type__c</fullName>
    <label>Arrest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Patrol Arrest</fullName>
            </value>
            <value>
                <fullName>ACIS Arrest</fullName>
            </value>
            <value>
                <fullName>Squad Arrest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>