force-app/main/default/objects/Charge_Information__c/fields/Attempted__c.field-meta.xml
<CustomField>
    <fullName>Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attempted</label>
    <type>Checkbox</type>
</CustomField>