force-app/main/default/objects/Charge_Information__c/fields/Bond_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Bond_Amount_del__c</fullName>
    <description>amount of bond ordered by the court</description>
    <inlineHelpText>Please enter the amount of bond ordered by the court</inlineHelpText>
    <label>Bond Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>