force-app/main/default/objects/Charge_Information__c/fields/Bond_to_be_Posted_on_del__c.field-meta.xml
<CustomField>
    <fullName>Bond_to_be_Posted_on_del__c</fullName>
    <description>date the court orsdered bond to be posted</description>
    <inlineHelpText>please enter the date the court ordered the defendant to post the bond</inlineHelpText>
    <label>Bond to be Posted on</label>
    <type>Date</type>
</CustomField>