force-app/main/default/objects/Charge_Information__c/fields/Case_Summary__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary__c</fullName>
    <formula>Case__r.Case_Summary_Preview__c</formula>
    <label>Case Summary</label>
    <type>Text</type>
</CustomField>