force-app/main/default/objects/Charge_Information__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>Case__r.RecordType.Name</formula>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>