force-app/main/default/objects/Charge_Information__c/fields/Charge_Count__c.field-meta.xml
<CustomField>
    <fullName>Charge_Count__c</fullName>
    <description>This is the number of times subject was charged</description>
    <inlineHelpText>Enter the number of counts this defendant was charged with under the above statute #</inlineHelpText>
    <label>Number of Counts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>