force-app/main/default/objects/Charge_Information__c/fields/Charge_Details__c.field-meta.xml
<CustomField>
    <fullName>Charge_Details__c</fullName>
    <label>Charge Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>