force-app/main/default/objects/Charge_Information__c/fields/Charge_Level__c.field-meta.xml
<CustomField>
    <fullName>Charge_Level__c</fullName>
    <label>Charge Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Felony</fullName>
            </value>
            <value>
                <fullName>Infraction</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
            <value>
                <fullName>Misdemeanor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>