force-app/main/default/objects/Charge_Information__c/fields/Charge_Title__c.field-meta.xml
<CustomField>
    <fullName>Charge_Title__c</fullName>
    <inlineHelpText>NYC: This field will auto-populate after statute # is filled in</inlineHelpText>
    <label>Charge Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>