force-app/main/default/objects/Charge_Information__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Arrest Charge</fullName>
            </value>
            <value>
                <fullName>Indictment Charge</fullName>
            </value>
            <value>
                <fullName>Superseding Indictment Charge</fullName>
            </value>
            <value>
                <fullName>Arrest Warrant – Original</fullName>
                <isActive>false</isActive>
                <label>Arrest Warrant – Original</label>
            </value>
            <value>
                <fullName>Indictment – Original</fullName>
                <isActive>false</isActive>
                <label>Indictment – Original</label>
            </value>
            <value>
                <fullName>Indictment – Superseding</fullName>
                <isActive>false</isActive>
                <label>Indictment – Superseding</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>