force-app/main/default/objects/Charge_Information__c/fields/Community_Service_Hours__c.field-meta.xml
<CustomField>
    <fullName>Community_Service_Hours__c</fullName>
    <label>Community Service Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>