force-app/main/default/objects/Charge_Information__c/fields/Counts_Acquitted__c.field-meta.xml
<CustomField>
    <fullName>Counts_Acquitted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Counts Acquitted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>