force-app/main/default/objects/Charge_Information__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Richmond County</fullName>
            </value>
            <value>
                <fullName>Kings County</fullName>
            </value>
            <value>
                <fullName>Queens County</fullName>
            </value>
            <value>
                <fullName>New York County</fullName>
            </value>
            <value>
                <fullName>Bronx County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>