force-app/main/default/objects/Charge_Information__c/fields/Court_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Court_Disposition__c</fullName>
    <description>final outcome of court procedings for this charge</description>
    <inlineHelpText>Enter the final judgment for this charge</inlineHelpText>
    <label>Court Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abated</fullName>
            </value>
            <value>
                <fullName>ACD</fullName>
            </value>
            <value>
                <fullName>Acquitted</fullName>
            </value>
            <value>
                <fullName>Convicted After Trial</fullName>
            </value>
            <value>
                <fullName>Convicted - Alford Plea/No Contest</fullName>
            </value>
            <value>
                <fullName>Convicted - Pleaded to Lesser Charge (See Notes)</fullName>
            </value>
            <value>
                <fullName>Convicted - Pled Guilty</fullName>
            </value>
            <value>
                <fullName>Convicted - Trial</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Dismissed – 30.30 (other)</fullName>
            </value>
            <value>
                <fullName>Dismissed – 30.30 (witness uncooperative)</fullName>
            </value>
            <value>
                <fullName>Dismissed – Defendant Deceased</fullName>
            </value>
            <value>
                <fullName>Dismissed – Insufficient evidence</fullName>
            </value>
            <value>
                <fullName>Dismissed - Pled to Other Charge</fullName>
            </value>
            <value>
                <fullName>Dismissed - Prosecutor Discretion</fullName>
            </value>
            <value>
                <fullName>Dismissed – Witness uncooperative</fullName>
            </value>
            <value>
                <fullName>Diversion</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
            <value>
                <fullName>Found Unfit to Proceed</fullName>
            </value>
            <value>
                <fullName>Grand Jury- Indicted</fullName>
            </value>
            <value>
                <fullName>Grand Jury- No Bill</fullName>
            </value>
            <value>
                <fullName>Nolle prosequi</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>