force-app/main/default/objects/Charge_Information__c/fields/Court_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Court_Jurisdiction__c</fullName>
    <label>Court Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Magistrate/Town</fullName>
            </value>
            <value>
                <fullName>State/District</fullName>
            </value>
            <value>
                <fullName>Federal District Court</fullName>
            </value>
            <value>
                <fullName>State/Superior</fullName>
            </value>
            <value>
                <fullName>State/Circuit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>