force-app/main/default/objects/Charge_Information__c/fields/Courtdisposition_Date__c.field-meta.xml
<CustomField>
    <fullName>Courtdisposition_Date__c</fullName>
    <inlineHelpText>Enter the date of the final judgment for this charge</inlineHelpText>
    <label>Court Disposition Date</label>
    <type>Date</type>
</CustomField>