force-app/main/default/objects/Charge_Information__c/fields/DAT_Live_Arrest__c.field-meta.xml
<CustomField>
    <fullName>DAT_Live_Arrest__c</fullName>
    <label>DAT/Live Arrest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAT</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>