force-app/main/default/objects/Charge_Information__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Person charged with violation of a federal, state or local crime.</description>
    <label>Defendant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Charge Information</relationshipLabel>
    <relationshipName>Charge_Information</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>