force-app/main/default/objects/Charge_Information__c/fields/Defendant_Case_s_Closed__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Case_s_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when all counts related to this charge are disposed of</inlineHelpText>
    <label>Charge/s Closed</label>
    <type>Checkbox</type>
</CustomField>