force-app/main/default/objects/Charge_Information__c/fields/Defendant_Name__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Name__c</fullName>
    <formula>Defendant__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Name</label>
    <type>Text</type>
</CustomField>