force-app/main/default/objects/Charge_Information__c/fields/Docket__c.field-meta.xml
<CustomField>
    <fullName>Docket__c</fullName>
    <label>Docket #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>