force-app/main/default/objects/Charge_Information__c/fields/Indictment__c.field-meta.xml
<CustomField>
    <fullName>Indictment__c</fullName>
    <label>Indictment #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>