force-app/main/default/objects/Charge_Information__c/fields/Indictment_Count__c.field-meta.xml
<CustomField>
    <fullName>Indictment_Count__c</fullName>
    <label>Indictment Count #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>