force-app/main/default/objects/Charge_Information__c/fields/Length_of_Confinement__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Confinement__c</fullName>
    <description>Please enter the length the court ordered for prison/jail- indicate if any/all is suspended</description>
    <label>Length of Confinement (In Months)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>