force-app/main/default/objects/Charge_Information__c/fields/Length_of_Confinement_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Confinement_In_Months__c</fullName>
    <label>Length of Confinement (In Months)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>