force-app/main/default/objects/Charge_Information__c/fields/Length_of_No_animal_Order__c.field-meta.xml
<CustomField>
    <fullName>Length_of_No_animal_Order__c</fullName>
    <label>Length of No Animal Order (In Years)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>