force-app/main/default/objects/Charge_Information__c/fields/Length_of_probation__c.field-meta.xml
<CustomField>
    <fullName>Length_of_probation__c</fullName>
    <defaultValue>&quot;None Ordered&quot;</defaultValue>
    <label>Length of Probation (In Months)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>