force-app/main/default/objects/Charge_Information__c/fields/Length_of_Supervised_Release__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Supervised_Release__c</fullName>
    <defaultValue>&quot;None Ordered&quot;</defaultValue>
    <label>Length of Supervised Release (In Years)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>