force-app/main/default/objects/Charge_Information__c/fields/Length_of_Supervised_Release_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Supervised_Release_In_Years__c</fullName>
    <label>Length of Supervised Release (In Years)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>