force-app/main/default/objects/Charge_Information__c/fields/Next_Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Court_Date__c</fullName>
    <inlineHelpText>Enter the next scheduled court date</inlineHelpText>
    <label>Next Court Date</label>
    <type>Date</type>
</CustomField>