force-app/main/default/objects/Charge_Information__c/fields/Non_Animal_Related_Charge__c.field-meta.xml
<CustomField>
    <fullName>Non_Animal_Related_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the charge is not related to animals</inlineHelpText>
    <label>Non-Animal Related Charge</label>
    <type>Checkbox</type>
</CustomField>