force-app/main/default/objects/Charge_Information__c/fields/Petitiion_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Petitiion_Hearing_Date__c</fullName>
    <description>date petition heard by court</description>
    <inlineHelpText>Please enter the date of petition hearing</inlineHelpText>
    <label>Petition Hearing Date</label>
    <type>Date</type>
</CustomField>