force-app/main/default/objects/Charge_Information__c/fields/Petition_Filed__c.field-meta.xml
<CustomField>
    <fullName>Petition_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>please check if a Bond or Forfeiture petition has been filed</inlineHelpText>
    <label>Petition Filed</label>
    <type>Checkbox</type>
</CustomField>