force-app/main/default/objects/Charge_Information__c/fields/Petition_Type__c.field-meta.xml
<CustomField>
    <fullName>Petition_Type__c</fullName>
    <description>type of petition file with the court</description>
    <inlineHelpText>Select the type of petition filed</inlineHelpText>
    <label>Petition Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Forfeiture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>