force-app/main/default/objects/Charge_Information__c/fields/Pleaded_to_Other_Charge__c.field-meta.xml
<CustomField>
    <fullName>Pleaded_to_Other_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pleaded to Other Charge</label>
    <type>Checkbox</type>
</CustomField>