force-app/main/default/objects/Charge_Information__c/fields/Repleader__c.field-meta.xml
<CustomField>
    <fullName>Repleader__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repleader</label>
    <type>Checkbox</type>
</CustomField>