force-app/main/default/objects/Charge_Information__c/fields/Repleader_Charge_Title__c.field-meta.xml
<CustomField>
    <fullName>Repleader_Charge_Title__c</fullName>
    <formula>Repleader_Statute__r.Offense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repleader Charge Title</label>
    <type>Text</type>
</CustomField>