force-app/main/default/objects/Charge_Information__c/fields/Repleader_Date__c.field-meta.xml
<CustomField>
    <fullName>Repleader_Date__c</fullName>
    <label>Repleader Date</label>
    <type>Date</type>
</CustomField>