force-app/main/default/objects/Charge_Information__c/fields/Repleader_Statute__c.field-meta.xml
<CustomField>
    <fullName>Repleader_Statute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repleader Statute #</label>
    <referenceTo>NY_Offense__c</referenceTo>
    <relationshipLabel>Charge Information (Repleader Statute #)</relationshipLabel>
    <relationshipName>Charge_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>