force-app/main/default/objects/Charge_Information__c/fields/Restitution_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Amount_Requested__c</fullName>
    <label>Restitution Amount Requested</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>