force-app/main/default/objects/Charge_Information__c/fields/Restitution_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>Restitution_Hearing_Date__c</fullName>
    <label>Restitution Hearing Date</label>
    <type>Date</type>
</CustomField>