force-app/main/default/objects/Charge_Information__c/fields/Sentence_Details__c.field-meta.xml
<CustomField>
    <fullName>Sentence_Details__c</fullName>
    <label>Sentence Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>