force-app/main/default/objects/Charge_Information__c/fields/Sentence_Details_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Sentence_Details_Picklist__c</fullName>
    <label>Sentence Details</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Court_Disposition__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Ban</fullName>
            </value>
            <value>
                <fullName>Anger Management Counseling</fullName>
            </value>
            <value>
                <fullName>Animals Forfeited</fullName>
            </value>
            <value>
                <fullName>Community Service</fullName>
            </value>
            <value>
                <fullName>Conditional Discharge</fullName>
            </value>
            <value>
                <fullName>Drug/Alcohol Counseling</fullName>
            </value>
            <value>
                <fullName>Fine</fullName>
            </value>
            <value>
                <fullName>FOOP</fullName>
            </value>
            <value>
                <fullName>Home Confinement/House Arrest</fullName>
            </value>
            <value>
                <fullName>Jail</fullName>
            </value>
            <value>
                <fullName>Other (Describe in Notes)</fullName>
            </value>
            <value>
                <fullName>Prison</fullName>
            </value>
            <value>
                <fullName>Probation (Supervised)</fullName>
            </value>
            <value>
                <fullName>Probation (Unsupervised)</fullName>
            </value>
            <value>
                <fullName>Psychological Counseling</fullName>
            </value>
            <value>
                <fullName>Registry</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Supervised Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>