force-app/main/default/objects/Charge_Information__c/fields/Statute__c.field-meta.xml
<CustomField>
    <fullName>Statute__c</fullName>
    <description>This is the statute, chapter, section and sub-section of the charge law</description>
    <inlineHelpText>Write as: Statute.Chapter (section)(sub-section)
163.13(a)(1)</inlineHelpText>
    <label>Statute #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>